manifests/extensions/servicemesh/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: apps-default
  namespace: apps
spec:
  mtls:
    mode: PERMISSIVE
