manifests/extensions/servicemesh/sleep-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: apps
  labels:
    app: sleep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
        - name: sleep
          image: curlimages/curl:8.8.0
          command:
            - sleep
            - infinity
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
